DTO FEATURE IMPLEMENTATION